--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,7 @@ h3 {
 
 .modalwindow-flex-heading {
     display: flex;
+    justify-content: space-between;
 }
 
 .modalwindow-heading {
@@ -219,21 +220,27 @@ h3 {
     color: #90007F;
     font-size: 16px;
     margin-left: 10px;
+    transform: translateX(-50px);
 }
 
 .list-group {
+    height: 65%;
     display: flex;
     flex-wrap: wrap;
     padding: 0;
     flex-direction: row;
     margin-bottom: 0;
+    overflow: auto;
 }
 
 .list-group-item {
     color: #3D0043;
     font-size: 14px;
     list-style: none;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
     height: 22px;
     padding: 10px 15px;
     background: rgba(0, 0, 0, 0.04);
